--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -18,7 +18,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ededed;
     --foreground: #ededed;
   }
 }
@@ -27,4 +27,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+.input-custom-text {
+  @apply w-full border border-gray-200 rounded-md px-3 py-2 text-gray-700 placeholder:text-gray-500 focus:outline-none focus:ring-0 focus:border-gray-400;
 }
